--- a/thisisjava/.classpath
+++ b/thisisjava/.classpath
@@ -6,6 +6,7 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/dev/eGovFrameDev-3.10.0-64bit/eclipse/lombok.jar"/>
 	<classpathentry kind="lib" path="C:/dev/workspace/my_lib/dist/my_lib.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
