--- a/thisisjava/.classpath
+++ b/thisisjava/.classpath
@@ -8,5 +8,7 @@
 	</classpathentry>
 	<classpathentry kind="lib" path="C:/dev/eGovFrameDev-3.10.0-64bit/eclipse/lombok.jar"/>
 	<classpathentry kind="lib" path="C:/dev/workspace/my_lib/dist/my_lib.jar"/>
+	<classpathentry kind="lib" path="lib/json-20230227.jar"/>
+	<classpathentry kind="lib" path="lib/gson-2.10.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
